# zdp-streamlit-bi-template

./: .gitignore  CLAUDE.md  README.md  pyproject.toml  streamlit_app.py
core/: __init__.py  config.py  filter_config.py  session.py
docs/: DASHBOARD_BRIEF_EXAMPLE_Z2.md  DASHBOARD_BRIEF_QUICK_START.md  DASHBOARD_BRIEF_TEMPLATE.md  ONBOARDING_GUIDE.md  QUICK_START.md  TROUBLESHOOTING.md  WHICH_BRIEF_SHOULD_I_USE.md
metrics/: __init__.py  loader.py  metric.py  registry.py
metrics/definitions/: __init__.py  demo.py
services/: __init__.py
services/snowflake_svc/: __init__.py  session.py
services/snowflake_svc/demo/: __init__.py  service.py  sql.py
services/snowflake_svc/drill_down/: __init__.py  service.py  sql.py
ui/components/: donut_card.py  donut_card_config.py  drill_button.py  drill_config.py  drill_modal_v2.py  filters.py  formatters.py  theme.py
ui/components/drill_tabs/: breakdown_config.py  breakdown_tab.py  trend_config.py  trend_tab.py
ui/pages/: __init__.py  demo.py
