[project]
name = "zdp-streamlit-bi-template"
version = "1.0.0"
description = "Minimal Streamlit Enterprise Metrics Template"
requires-python = ">=3.8"
dependencies = [
    "streamlit>=1.40.0",
    "pandas>=2.0.0",
    "snowflake-snowpark-python>=1.25.0",
    "plotly>=5.24.0",
    "altair>=5.0.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=22.0.0",
]

[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"
